# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pythonci.yml
page_analyzer/: app.py  content_html.py  database.py  validate_urls.py
page_analyzer/templates/: all_urls.html  head.html  header.html  index.html  not_found.html  server_error.html  single_url.html
